Prevent brew warnings from showing up

--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Install dependencies
       run: |
         brew update
-        brew install --formula cmake
+        brew install --formula cmake --quiet
 
     - name: Make the "transpiler/build" directory
       run: mkdir ${{github.workspace}}/transpiler/build
