--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "configurations": [
         {
-            "name": "PolarFrankie Parser Debug (ANTLR4 grammar)",
+            "name": "Parser (ANTLR4 grammar) Debug",
             "type": "antlr-debug",
             "request": "launch",
             "input": "${file}",
