Reset the `/build` directory on tests
This is done to prevent tests from passing when a binary isn't properly copied to the `/dist` folder! (in such cases, the main executable may be using other binaries that have been generated and linked from with the build directory!)

--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -49,8 +49,15 @@ jobs:
       run: cmake --build . --config ${{inputs.build_mode}}
       working-directory: transpiler/build
 
+    - name: Reset the "transpiler/build" directory
+      run: |
+        rm -rf ${{github.workspace}}/transpiler/build
+        mkdir ${{github.workspace}}/transpiler/build
+
     - name: Run Tests
-      run: ctest -VV -C ${{inputs.build_mode}}
+      run: |
+        cmake --build . --config ${{inputs.build_mode}}
+        ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
     - name: Extract version (optional)
@@ -91,8 +98,15 @@ jobs:
       run: cmake --build . --config ${{inputs.build_mode}}
       working-directory: transpiler/build
 
+    - name: Reset the "transpiler/build" directory
+      run: |
+        rm -rf ${{github.workspace}}/transpiler/build
+        mkdir ${{github.workspace}}/transpiler/build
+
     - name: Run Tests
-      run: ctest -VV -C ${{inputs.build_mode}}
+      run: |
+        cmake --build . --config ${{inputs.build_mode}}
+        ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
     - name: Extract version (optional)
