--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -56,7 +56,7 @@ jobs:
 
     - name: Run Tests
       run: |
-        cmake --build . --config ${{inputs.build_mode}}
+        cmake .. -DCMAKE_BUILD_TYPE=${{inputs.build_mode}} -DCMAKE_UNIX_GENERATOR_PLATFORM=${{inputs.build_platform}}
         ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
@@ -105,7 +105,7 @@ jobs:
 
     - name: Run Tests
       run: |
-        cmake --build . --config ${{inputs.build_mode}}
+        cmake .. -DCMAKE_BUILD_TYPE=${{inputs.build_mode}} -DCMAKE_UNIX_GENERATOR_PLATFORM=${{inputs.build_platform}}
         ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
