Add ` --parallel` build flag

--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -4,7 +4,7 @@
         "build-cmake-win-64": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -A x64",
         "build-cmake-lix-32": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_UNIX_GENERATOR_PLATFORM=x86",
         "build-cmake-lix-64": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_UNIX_GENERATOR_PLATFORM=x64",
-        "build-binary": "cd build && cmake --build . --config Release",
+        "build-binary": "cd build && cmake --build . --config Release --parallel 3",
         "debug-build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug",
         "debug-build-binary": "cd build && cmake --build . --config Debug",
         "win-clean": "rd /s /q build && rd /s /q dist",
