--- a/.github/workflows/release_assets.yml
+++ b/.github/workflows/release_assets.yml
@@ -25,14 +25,14 @@ jobs:
   # Transpiler binaries
   build-transpiler-debug:
     name: Generate 'Debug' binaries
-    uses: ./.github/actions/transpiler_dynamic_build.yml
+    uses: ./.github/actions/transpiler_dynamic_build.yml@main
     with:
       build_mode: Debug
       bundle_binaries: true
   build-transpiler-release:
     name: Generate 'Release' binaries
     needs: build-transpiler-debug
-    uses: ./.github/actions/transpiler_dynamic_build.yml
+    uses: ./.github/actions/transpiler_dynamic_build.yml@main
     with:
       build_mode: Release
       bundle_binaries: true
