--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -105,6 +105,7 @@ jobs:
 
     - name: Run Tests
       run: |
+        otool -L ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/FrankieTranspiler
         cmake .. -DCMAKE_BUILD_TYPE=${{inputs.build_mode}} -DCMAKE_UNIX_GENERATOR_PLATFORM=${{inputs.build_platform}}
         ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
