Add a path for `manifest.ini`

--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -9,6 +9,7 @@ set(FRANKIE_DEPENDENCIES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependencies)
 set(FRANKIE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
 set(FRANKIE_TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 set(FRANKIE_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dist)
+set(FRANKIE_MANIFEST_FILE ${CMAKE_CURRENT_SOURCE_DIR}/manifest.ini)
 
 # CMake modules path
 set(CMAKE_MODULE_PATH
