Update `manifest.ini` data

--- a/transpiler/manifest.ini
+++ b/transpiler/manifest.ini
@@ -1,1 +1,22 @@
+; Manifest
+; Contains all binary versioning information
+
+[FrankieTranspiler]
 VERSION="0.0.1-alpha.002"
+SOVERSION="1"
+
+[FrankieBaseLibrary]
+VERSION="INHERIT:FrankieTranspiler"
+SOVERSION="1"
+
+[FrankieCommsLibrary]
+VERSION="INHERIT:FrankieTranspiler"
+SOVERSION="1"
+
+[FrankieCommonLibrary]
+VERSION="INHERIT:FrankieTranspiler"
+SOVERSION="1"
+
+[FrankieParserLibrary]
+VERSION="INHERIT:FrankieTranspiler"
+SOVERSION="1"
