--- a/transpiler/manifest.ini
+++ b/transpiler/manifest.ini
@@ -1,6 +1,9 @@
 ; Manifest
 ; Contains all binary versioning information
 
+; For now, keep the [FrankieTranspiler] section at the top!
+; This is done to enable simple command line version detection!
+; (May be replaced later...)
 [FrankieTranspiler]
 VERSION="0.0.1-alpha.002"
 
