Add `DESCRIPTION` value

--- a/transpiler/manifest.ini
+++ b/transpiler/manifest.ini
@@ -6,15 +6,20 @@
 ; (May be replaced later...)
 [FrankieTranspiler]
 VERSION="0.0.1-alpha.002"
+DESCRIPTION="PolarFrankie Transpiler"
 
 [FrankieBaseLibrary]
 VERSION="INHERIT:FrankieTranspiler"
+DESCRIPTION="PolarFrankie Base Library"
 
 [FrankieCommsLibrary]
 VERSION="INHERIT:FrankieTranspiler"
+DESCRIPTION="PolarFrankie Communications Library"
 
 [FrankieCommonLibrary]
 VERSION="INHERIT:FrankieTranspiler"
+DESCRIPTION="PolarFrankie Common Internals Library"
 
 [FrankieParserLibrary]
 VERSION="INHERIT:FrankieTranspiler"
+DESCRIPTION="PolarFrankie Parser Library"
