--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -7,6 +7,7 @@ enable_testing()
 set(CMAKE_ERROR_ON_ABSOLUTE_INSTALL_DESTINATION ON)
 
 # Directories
+set(FRANKIE_BUILD_DIR ${CMAKE_BINARY_DIR})
 set(FRANKIE_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 set(FRANKIE_DEPENDENCIES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependencies)
 set(FRANKIE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
