--- a/.github/workflows/_transpiler_windows_build.yml
+++ b/.github/workflows/_transpiler_windows_build.yml
@@ -33,6 +33,9 @@ jobs:
 
     - name: Install Visual Studio Build Tools
       uses: ilammy/msvc-dev-cmd@v1.13.0
+      with:
+        arch: ${{inputs.build_platform_name}}
+        sdk: 10.0.26100.0
 
     - name: Make the "transpiler/build" directory
       run: mkdir ${{github.workspace}}/transpiler/build
