--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -123,7 +123,7 @@ jobs:
         path: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/
 
     # Used to display all patch errors (I ain't got no money for a macOS, deal with it)
-    - name: Debug patch rejects
-      if: always()
-      run: find . -type f -regex ".*\.rej$" -print0 | xargs -0 cat
-      working-directory: transpiler/build
+    #- name: Debug patch rejects
+    #  if: always()
+    #  run: find . -type f -regex ".*\.rej$" -print0 | xargs -0 cat
+    #  working-directory: transpiler/build
