--- a/transpiler/cmake/version/VersionInfo.Rc.in
+++ b/transpiler/cmake/version/VersionInfo.Rc.in
@@ -12,7 +12,7 @@ BEGIN
         BLOCK "040904b0" // U.S. English, Unicode
         BEGIN
             VALUE "CompanyName", "Ender-ing GitHub Organisation"
-            VALUE "LegalCopyright", "Copyright (C) 2025 My Ender-ing GitHub Organisation"
+            VALUE "LegalCopyright", "Copyright (C) 2025 Ender-ing GitHub Organisation"
             VALUE "FileDescription", "@IN_BIN_DESCRIPTION@"
             VALUE "FileVersion", "@IN_BIN_VERSION_NAME@"
             VALUE "InternalName", "@IN_BIN_NAME@"
