Update `VERSION` value

--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -63,7 +63,7 @@ jobs:
     - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
-        VERSION=$(${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/frankie --version)
+        VERSION=$(${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/frankie --version | head -n 1)
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Upload Binaries Artifact (optional)
@@ -112,7 +112,7 @@ jobs:
     - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
-        VERSION=$(${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/frankie --version)
+        VERSION=$(${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/${{inputs.build_platform_name}}/frankie --version | head -n 1)
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Upload Binaries Artifact (optional)
