--- a/transpiler/manifest.ini
+++ b/transpiler/manifest.ini
@@ -4,22 +4,22 @@
 ; For now, keep the [FrankieTranspiler] section at the top!
 ; This is done to enable simple command line version detection!
 ; (May be replaced later...)
-[FrankieTranspiler]
+[TARGET:FrankieTranspiler]
 VERSION="0.0.1-alpha.002"
 DESCRIPTION="PolarFrankie Transpiler"
 
-[FrankieBaseLibrary]
-VERSION="INHERIT:FrankieTranspiler"
+[TARGET:FrankieBaseLibrary]
+VERSION="INHERIT:TARGET:FrankieTranspiler"
 DESCRIPTION="PolarFrankie Base Library"
 
-[FrankieCommsLibrary]
-VERSION="INHERIT:FrankieTranspiler"
+[TARGET:FrankieCommsLibrary]
+VERSION="INHERIT:TARGET:FrankieTranspiler"
 DESCRIPTION="PolarFrankie Communications Library"
 
-[FrankieCommonLibrary]
-VERSION="INHERIT:FrankieTranspiler"
+[TARGET:FrankieCommonLibrary]
+VERSION="INHERIT:TARGET:FrankieTranspiler"
 DESCRIPTION="PolarFrankie Common Internals Library"
 
-[FrankieParserLibrary]
-VERSION="INHERIT:FrankieTranspiler"
+[TARGET:FrankieParserLibrary]
+VERSION="INHERIT:TARGET:FrankieTranspiler"
 DESCRIPTION="PolarFrankie Parser Library"
