--- a/supplements/VSCode-Extension/package.json
+++ b/supplements/VSCode-Extension/package.json
@@ -62,6 +62,13 @@
                 "title": "Check the latest PolarFrankie documentation!",
                 "category": "PolarFrankie"
             }
+        ],
+        "files": [
+            {
+                "language": "polarfrankie",
+                "scheme": "file",
+                "pattern": "**/*.frankie"
+            }
         ]
     },
     "activationEvents": [
