Fix release workflow

--- a/.github/workflows/release_assets.yml
+++ b/.github/workflows/release_assets.yml
@@ -91,31 +91,25 @@ jobs:
             artifact_dir="c__$artifact_name"
             gh run download ${{github.run_id}} -n "$artifact_name" -D "$artifact_dir" --repo ${{github.repository}}
 
+            cd $artifact_dir
+
             # Check archive type
             if [[ "$artifact_name" == *.vsix ]]; then
-              # Upload a plain package file
-              upload_asset "$artifact_dir/$artifact_name"
-              # Save asset hash
-              cd $artifact_dir
-              sha256sum $artifact_name >> ../SHASUMS256.txt
-              cd ..
-            else
-              ## .zip
-              #artifact_zip="$artifact_name.zip"
-              #zip -r $artifact_zip $artifact_dir/
-              #upload_asset "$artifact_zip"
-              ## Save asset hash
-              #sha256sum $artifact_zip >> SHASUMS256.txt
 
+              # Upload a plain package file
+              upload_asset "$artifact_name"
+              # Save asset hash
+              sha256sum $artifact_name >> ../SHASUMS256.txt
+            else
               # .tar.gz
               artifact_targz="$artifact_name.tar.gz"
-              cd $artifact_dir
               tar -czvf $artifact_targz *
-              cd ..
               upload_asset "$artifact_targz"
               # Save asset hash
-              sha256sum $artifact_targz >> SHASUMS256.txt
+              sha256sum $artifact_targz >> ../SHASUMS256.txt
             fi
+
+            cd ..
           done < artifacts.txt
           # Upload SHA256 hashes
           upload_asset "SHASUMS256.txt"
