--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -5,6 +5,10 @@
         "build-cmake-lix-32": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_UNIX_GENERATOR_PLATFORM=x86",
         "build-cmake-lix-64": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_UNIX_GENERATOR_PLATFORM=x64",
         "build-binary": "cd build && cmake --build . --config Release --parallel 3",
+        "build-base": "cd build && cmake --build . --config Release --parallel 3 --target FrankieBaseLibrary",
+        "build-common": "cd build && cmake --build . --config Release --parallel 3 --target FrankieCommonLibrary",
+        "build-comms": "cd build && cmake --build . --config Release --parallel 3 --target FrankieCommsLibrary",
+        "build-parser": "cd build && cmake --build . --config Release --parallel 3 --target FrankieParserLibrary",
         "debug-build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug",
         "debug-build-binary": "cd build && cmake --build . --config Debug",
         "win-clean": "rd /s /q build && rd /s /q dist",
