--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -9,10 +9,6 @@ on:
         required: false
         type: string
         default: macos-latest
-      skip_mac:
-        required: false
-        type: boolean
-        default: false
       build_platform:
         required: true
         type: string
@@ -25,6 +21,10 @@ on:
       bundle_binaries:
         required: true
         type: boolean
+      skip_for:
+        required: false
+        type: string
+        default: ''
 
 jobs:
 
@@ -81,7 +81,7 @@ jobs:
   # macOS
   build-transpiler-on-macos:
     name: macOS ${{inputs.build_platform_name}}
-    if: !inputs.skip_mac
+    if: inputs.skip_for != 'macOS'
     runs-on: ${{inputs.mac_system}}
 
     steps:
