--- a/.github/workflows/_transpiler_unix_like_build.yml
+++ b/.github/workflows/_transpiler_unix_like_build.yml
@@ -78,8 +78,8 @@ jobs:
   build-transpiler-on-macos:
     name: macOS ${{inputs.build_platform_name}}
     runs-on: ${{inputs.mac_system}}
-    # Skip x32 builds for macOS
-    if: inputs.build_platform_name != 'x86_32'
+    # Skip 32-bit builds for macOS
+    if: inputs.build_platform_name != 'x86_32' && inputs.build_platform_name != 'arm32'
 
     steps:
     - name: Checkout code
@@ -96,13 +96,6 @@ jobs:
     - name: Configure CMake
       run: cmake .. -DCMAKE_BUILD_TYPE=${{inputs.build_mode}} -DCMAKE_UNIX_GENERATOR_PLATFORM=${{inputs.build_platform}} -DFRANKIE_TESTS=OFF
       working-directory: transpiler/build
-
-    # Handle cross-compilation on macOS
-    - name: Tap osx-cross/homebrew-arm
-      run: brew tap osx-cross/homebrew-arm
-    - name: Install armv7 cross-compiler ('arm32' target)
-      if: inputs.build_platform_name == 'arm32'
-      run: brew install --formula arm-gcc-bin --with-target=armv7-none-eabi
       
     - name: Build
       run: cmake --build . --config ${{inputs.build_mode}} --parallel 3
