--- a/.github/workflows/_transpiler_linux_build.yml
+++ b/.github/workflows/_transpiler_linux_build.yml
@@ -37,11 +37,11 @@ jobs:
     - name: Install dependencies (x64_32)
       if: inputs.build_platform_name == 'x86_32'
       run: |
+        sudo dpkg --add-architecture i386
         sudo dpkg --add-architecture i686
         sudo apt update
         sudo apt upgrade
-        sudo apt-get install -y gcc-multilib g++-multilib
-        sudo apt-get install -y libc6:i686 libstdc++6:i686
+        sudo apt-get install -y gcc-multilib g++-multilib libc6:i386 libstdc++6:i386 libc6:i686 libstdc++6:i686
 
     - name: Install dependencies (arm32)
       if: inputs.build_platform_name == 'arm32'
@@ -49,8 +49,7 @@ jobs:
         sudo dpkg --add-architecture armhf
         sudo apt update
         sudo apt upgrade
-        sudo apt-get install -y gcc-multilib g++-multilib
-        sudo apt-get install -y libc6:armhf libstdc++6:armhf
+        sudo apt-get install -y gcc-multilib g++-multilib libc6:armhf libstdc++6:armhf
 
     - name: Make the "transpiler/build" directory
       run: mkdir ${{github.workspace}}/transpiler/build
