--- a/.github/workflows/_transpiler_linux_build.yml
+++ b/.github/workflows/_transpiler_linux_build.yml
@@ -38,10 +38,9 @@ jobs:
       if: inputs.build_platform_name == 'x86_32'
       run: |
         sudo dpkg --add-architecture i386
-        sudo dpkg --add-architecture i686
         sudo apt update
         sudo apt upgrade
-        sudo apt-get install -y gcc-multilib g++-multilib libc6:i386 libstdc++6:i386 libc6:i686 libstdc++6:i686
+        sudo apt-get install -y gcc-multilib g++-multilib libc6:i386 libstdc++6:i386
 
     - name: Install dependencies (arm32)
       if: inputs.build_platform_name == 'arm32'
